--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,7 @@
 [build]
-  command = "cd functions && npm i && cd .."
+  command = "npm run build"
+  publish = "_site"
   functions = "functions"
+
+[dev]
+  command = "npm run dev"
