--- a/package.json
+++ b/package.json
@@ -4,12 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "serve"
+    "dev": "eleventy --serve",
+    "build": "eleventy"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "dependencies": {
+    "node-fetch": "^2.6.0"
+  },
   "devDependencies": {
-    "serve": "^11.3.0"
+    "@11ty/eleventy": "^0.11.0"
   }
 }
